--- a/pages/templates/pages/_sensory.html
+++ b/pages/templates/pages/_sensory.html
@@ -1,5 +1,6 @@
 {% load i18n %}
 {% load pages_tags %}
+{% load static %}
 
 <section class="freetext-display">
   <div class="row p-5 border border-dark">
@@ -12,22 +13,30 @@
       </div>
       {% if module.sound != module.SENS_NONE %}
       <div class="col-12">
-        {{ module.sound|sensitivity_desc:"sound" }}
+        <img class="img-fluid" src="{% static module.sound|sensitivity_img:"sound" %}" alt="">
+        <p class="text-center">{{ module.sound|sensitivity_desc:"sound" }}</p>
+        <hr/>
       </div>
       {% endif %}
       {% if module.light != module.SENS_NONE %}
       <div class="col-12">
-        {{ module.light|sensitivity_desc:"light" }}
+        <img class="img-fluid" src="{% static module.light|sensitivity_img:"light" %}" alt="">
+        <p class="text-center">{{ module.light|sensitivity_desc:"light" }}</p>
+        <hr/>
       </div>
       {% endif %}
       {% if module.smell != module.SENS_NONE %}
       <div class="col-12">
-        {{ module.smell|sensitivity_desc:"smell" }}
+        <img class="img-fluid" src="{% static module.smell|sensitivity_img:"smell" %}" alt="">
+        <p class="text-center">{{ module.smell|sensitivity_desc:"smell" }}</p>
+        <hr/>
       </div>
       {% endif %}
       {% if module.temperature != module.SENS_NONE %}
       <div class="col-12">
-        {{ module.temperature|sensitivity_desc:"temperature" }}
+        <img class="img-fluid" src="{% static module.temperature|sensitivity_img:"temperature" %}" alt="">
+        <p class="text-center">{{ module.temperature|sensitivity_desc:"temperature" }}</p>
+        <hr/>
       </div>
       {% endif %}
     {% endif %}
