--- a/pages/templates/pages/createpage.html
+++ b/pages/templates/pages/createpage.html
@@ -77,6 +77,10 @@
             {{ form.module|attr:"aria-describedby:module-help" }}
             {% endif %}
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
           <div class="text-right">
             <button type="submit" name="submit_module" class="btn btn-lg btn-primary"> {% trans "Create module" context "Button" %} </button>
             {% if modules %}
