--- a/pages/templates/pages/_freelist.html
+++ b/pages/templates/pages/_freelist.html
@@ -1,14 +1,16 @@
 
 <section class="freelist-display">
-  <div class="row my-2">
-    <div class="col-12">
-      <div class="card">
-        {% if module.title %}
-          <div class="card-header">
-            <h4 class="mt-2">{{ module.title }}</h4>
-          </div>
-        {% endif %}
-        {% if module.items %}
+  {% if module.title %}
+    <div class="row my-2">
+      <div class="col-12">
+        <h2 class="mt-2">{{ module.title }}</h2>
+      </div>
+    </div>
+  {% endif %}
+  {% if module.items %}
+    <div class="row">
+      <div class="col-12">
+        <div class="card">
           <div class="card-body">
             <ul>
               {% for item in module.items %}
@@ -16,6 +18,9 @@
               {% endfor %}
             </ul>
           </div>
-        {% endif %}
-  </div>
+        </div>
+      </div>
+    </div>
+  {% endif %}
+
 </section>
