--- a/pages/templates/pages/_generalinfo.html
+++ b/pages/templates/pages/_generalinfo.html
@@ -1,8 +1,9 @@
 {% load static %}
 {% load i18n %}
 
-<section class="generalinfo-display">
-  <div class="row align-items-end justify-content-center border border-dark">
+<section class="generalinfo-display border border-dark">
+  <div class="row align-items-end justify-content-center ">
+
     <div class="col-12 col-sm-6 col-md-4 col-lg-3 order-sm-2 text-center p-5">
       <img src="{% static "img/blank-profile-picture.png" %}" class="rounded-circle profile-img" alt="avatar">
     </div>
