--- a/pages/templates/pages/base_createmodule.html
+++ b/pages/templates/pages/base_createmodule.html
@@ -18,11 +18,13 @@
         </h1>
       </div>
     </div>
+    {% block module_head %}
     <div class="row">
       <div class="col">
         <h2>{% block module_name %}{% endblock %}</h2>
       </div>
     </div>
+    {% endblock module_head %}
     <div class="row">
       <div class="col">
         <p class="text-secondary">{% trans "All fields are optional. You don't have to fill in anything you don't want." %}</p>
@@ -31,17 +33,19 @@
     {% block form_head %}
       <form action="" method="post">
     {% endblock %}
-      {% block module_form %}
-      {% endblock %}
+    {% block module_form %}
+    {% endblock %}
+    {% block form_foot %}
       <div class="row">
         <div class="col">
           <a href={% url 'pages:addmodule' page.id %} class="btn btn-danger">{% trans "Back" context "Button" %}</a>
         </div>
         <div class="col text-right">
-          <button type="submit" value="submit_add_more" class="btn btn-primary">{% trans "Save" context "Button" %}</button>
+          <button type="submit" name="submit_add_more" class="btn btn-primary">{% trans "Save" context "Button" %}</button>
         </div>
       </div>
     </form>
+    {% endblock %}
   </div>
 </section>
 {% endblock content %}
