accordeon with existing modules and edit and delete buttons

--- a/pages/templates/pages/_medication.html
+++ b/pages/templates/pages/_medication.html
@@ -3,7 +3,7 @@
 <section class="medication">
   <div class="row my-2">
     <div class="col-12">
-      <h2>{% trans "Medication" %}</h2>
+      <h2>{{ module.title }}</h2>
     </div>
   </div>
   <div class="row">
