--- a/pages/templates/pages/_communication.html
+++ b/pages/templates/pages/_communication.html
@@ -5,7 +5,7 @@
 <section class="communicationmethods-display">
   <div class="row my-2">
     <div class="col-12">
-      <h2>{% trans "Communication" %}</h2>
+      <h2>{{ module.title }}</h2>
     </div>
   </div>
   <div class="card-deck">
