--- a/pages/templates/pages/_contact.html
+++ b/pages/templates/pages/_contact.html
@@ -3,7 +3,7 @@
 <section class="contact-display">
   <div class="row my-2">
     <div class="col-12">
-      <h2>{% trans "Contacts" %}</h2>
+      <h2>{{ module.title }}</h2>
     </div>
   </div>
   <div class="row">
