--- a/pages/templates/pages/_dodont.html
+++ b/pages/templates/pages/_dodont.html
@@ -5,7 +5,7 @@
 <section class="dodont-display">
   <div class="row my-2">
     <div class="col-12">
-      <h2>{% trans "Do's and Don'ts" %}</h2>
+      <h2>{{ module.title }}</h2>
     </div>
   </div>
   <div class="row">
