--- a/pages/templates/pages/_sensory.html
+++ b/pages/templates/pages/_sensory.html
@@ -5,7 +5,7 @@
 <section class="sensory-display">
   <div class="row my-2">
     <div class="col-12">
-      <h2> {% trans "Sensory sensitivities" %} </h2>
+      <h2> {{ module.title }} </h2>
     </div>
   </div>
 
