--- a/pages/templates/pages/createpage.html
+++ b/pages/templates/pages/createpage.html
@@ -1,5 +1,6 @@
 {% extends "pages/base.html" %}
 {% load widget_tweaks %}
+{% load pages_tags %}
 {% load i18n %}
 
 {% block content %}
@@ -40,19 +41,41 @@
         </div>
       </div>
       {% if modules %}
-        <div class="row my-3 justify-content-center">
+        <div class="row my-3">
           <div class="col-12">
             <h4>{% trans "You allready have the following modules:" %} </h4>
           </div>
-          <div class="col-11">
-              {% for module in modules %}
-                  {% if module.template %}
+        </div>
+        <div class="row my-3" id="accordion" role="tablist">
+          {% for module in modules %}
+            <div class="col-12">
+              <div class="card">
+                <div class="card-header" role="tab" id="heading-{{forloop.counter}}">
+                  <h5 class="mb-0">
+                    <a class="collapsed"
+                       data-toggle="collapse"
+                       href="#module-preview-{{forloop.counter}}"
+                       role="button"
+                       aria-expanded="false"
+                       aria-controls="module-preview-{{forloop.counter}}">
+                      {{ module|verbose_name }}{% if module.title %}: {{ module.title }}{% endif %}
+                    </a>
+                  </h5>
+                </div>
+                <div id="module-preview-{{forloop.counter}}"
+                     class="collapse" role="tabpanel"
+                     aria-labelledby="heading-{{forloop.counter}}" data-parent="#accordion">
+                  <div class="card-body">
                     {% include module.template %}
-                  {% else %}
-                    <p>{{module}} </p>
-                  {% endif %}
-              {% endfor %}
-          </div>
+                  </div>
+                  <div class="card-footer text-right">
+                    <div class="btn btn-success">{% trans "Edit" %}</div>
+                    <div class="btn btn-danger">{% trans "Delete" %}</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
         </div>
       {% endif %}
       <div class="row">
